--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     # image: oliveigah/rinha-backend-v3:0.0.1
     build: .
     hostname: api1.com
+    networks:
+      - payment-processor
     environment:
       ERL_MAX_PORTS: 2048
       HTTP_SERVER_PORT: 3000
@@ -11,6 +13,7 @@ services:
       RELEASE_NODE: "api@api1.com"
       RELEASE_DISTRIBUTION: "name"
       BOOTSTRAP_NODES: "api@api2.com"
+      PROCESSORS_COUNT: 1
     healthcheck:
       test: curl -f http://api1:3000
     deploy:
@@ -22,6 +25,8 @@ services:
   api2:
     # image: oliveigah/rinha-backend-v3:0.0.1
     build: .
+    networks:
+      - payment-processor
     hostname: api2.com
     environment:
       ERL_MAX_PORTS: 2048
@@ -30,6 +35,7 @@ services:
       RELEASE_NODE: "api@api2.com"
       RELEASE_DISTRIBUTION: "name"
       BOOTSTRAP_NODES: "api@api1.com"
+      PROCESSORS_COUNT: 1
     healthcheck:
       test: curl -f http://api2:3000
     deploy:
@@ -40,6 +46,8 @@ services:
 
   nginx:
     image: nginx:latest
+    networks:
+      - payment-processor
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
@@ -53,5 +61,8 @@ services:
           cpus: "0.2"
           memory: "50MB"
 
-volumes:
-  database:
+networks:
+  backend:
+    driver: bridge
+  payment-processor:
+    external: true
