--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,18 @@ services:
       BOOTSTRAP_NODES: "api@api2.com"
       PROCESSORS_COUNT: 1
     healthcheck:
-      test: curl -f http://api1:3000
+      test: curl -f http://api1:3000/health
+      interval: 15s
+      timeout: 15s
+      start_period: 30s
+      start_interval: 1s
+      retries: 3
+    restart: always
     deploy:
       resources:
         limits:
-          cpus: "0.65"
-          memory: "150MB"
+          cpus: "0.4"
+          memory: "155MB"
 
   api2:
     # image: oliveigah/rinha-backend-v3:0.0.1
@@ -37,29 +43,40 @@ services:
       BOOTSTRAP_NODES: "api@api1.com"
       PROCESSORS_COUNT: 1
     healthcheck:
-      test: curl -f http://api2:3000
+      test: curl -f http://api2:3000/health
+      timeout: 15s
+      start_period: 30s
+      start_interval: 1s
+      retries: 3
+    restart: always
     deploy:
       resources:
         limits:
-          cpus: "0.65"
-          memory: "150MB"
+          cpus: "0.4"
+          memory: "155MB"
 
-  nginx:
-    image: nginx:latest
+  haproxy:
+    image: haproxy:3.1.7
     networks:
       - payment-processor
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - api1
-      - api2
     ports:
       - "9999:9999"
+    healthcheck:
+      test: |
+        bash -c 'exec 3<>/dev/tcp/127.0.0.1/9797; echo -e "GET / HTTP/1.1\nConnection: close\n" >&3; cat <&3 | grep -q "200 OK"'
+      interval: 15s
+      timeout: 15s
+      start_period: 30s
+      start_interval: 1s
+      retries: 3
+    restart: always
     deploy:
       resources:
         limits:
-          cpus: "0.2"
-          memory: "50MB"
+          cpus: "0.7"
+          memory: "40MB"
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
 
 networks:
   backend:
