--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 version: "3.5"
 services:
   api1:
-    # image: oliveigah/rinha-backend-v3:0.0.1
     build: .
     hostname: api1.com
     networks:
       - payment-processor
     environment:
-      ERL_MAX_PORTS: 2048
+      ERL_MAX_PORTS: 4500
       HTTP_SERVER_PORT: 3000
       RELEASE_COOKIE: "secret_cookie"
       RELEASE_NODE: "api@api1.com"
       RELEASE_DISTRIBUTION: "name"
       BOOTSTRAP_NODES: "api@api2.com"
-      PROCESSORS_COUNT: 1
+      PROCESSORS_COUNT: 10
     healthcheck:
       test: curl -f http://api1:3000/health
       interval: 15s
@@ -25,23 +24,22 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.4"
-          memory: "155MB"
+          cpus: "0.6"
+          memory: "147MB"
 
   api2:
-    # image: oliveigah/rinha-backend-v3:0.0.1
     build: .
     networks:
       - payment-processor
     hostname: api2.com
     environment:
-      ERL_MAX_PORTS: 2048
+      ERL_MAX_PORTS: 4500
       HTTP_SERVER_PORT: 3000
       RELEASE_COOKIE: "secret_cookie"
       RELEASE_NODE: "api@api2.com"
       RELEASE_DISTRIBUTION: "name"
       BOOTSTRAP_NODES: "api@api1.com"
-      PROCESSORS_COUNT: 1
+      PROCESSORS_COUNT: 10
     healthcheck:
       test: curl -f http://api2:3000/health
       timeout: 15s
@@ -52,8 +50,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.4"
-          memory: "155MB"
+          cpus: "0.6"
+          memory: "147MB"
 
   haproxy:
     image: haproxy:3.1.7
@@ -73,8 +71,9 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.7"
-          memory: "40MB"
+          cpus: "0.3"
+          # base 14MB + 10MB/1k conn
+          memory: "56MB"
     volumes:
       - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
 
